# rumo-ao-zero

./: .gitignore  README.md
apps/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
apps/backend/apps/: common.py
apps/backend/apps/accounts/: admin.py  models.py
apps/backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_vulnerabilidade_alvo.py
apps/backend/apps/backlog/: admin.py  apps.py  models.py  serializers.py  test_models.py  views.py
apps/backend/apps/backlog/migrations/: 0001_initial.py
apps/backend/apps/baseline/: admin.py  apps.py  models.py  serializers.py  taxonomia.py  test_mapear_gatilhos.py  test_migracao_dados.py  test_taxonomia.py  test_taxonomia_api.py  views.py
apps/backend/apps/baseline/migrations/: 0001_initial.py  0002_remove_trigger_halt_mais_comum_estadointerno_and_more.py  0003_baselineprofile_baseline_circ_abdominal.py  0004_ifthen_gatilho_add.py  0005_ifthen_gatilho_dados.py  0006_apaga_trigger_e_estadointerno.py  _0005_helpers.py  (+1 more)
apps/backend/apps/log/: admin.py  metrics.py  metrics_views.py  models.py  serializers.py  services.py  test_api.py  test_metrics.py  test_models.py  test_services.py  views.py
apps/backend/config/: settings.py  spa_views.py  urls.py
apps/backend/deploy/: README.md  docker-entrypoint.sh  rumo-backend.service
apps/backend/frontend/: index.html  package-lock.json  package.json  vite.config.ts
apps/backend/frontend/src/: App.svelte  main.ts  tokens.css
apps/backend/scripts/: mcp_server.py  registro.py  registro_core.py  test_registro_core.py
(+55 files in other folders)
