[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
